# arriva-tui

./: Cargo.toml  README.md
src/: error.rs  expeditions.rs  fetch_data.rs  main.rs  prelude.rs  stops.rs
src/app/: app.rs  expedition_list.rs  mod.rs  stateful_list.rs  stop_list.rs  tui.rs
src/structures/: expeditions.rs  mod.rs  stops.rs
src/utils/: fetch_data.rs  mod.rs
