[package]
name = "arriva-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1"
serde_json = "1.0.115"
serde_urlencoded = "0.7.1"
encoding_rs = "0.8.34"
tokio = { version = "1", features = ["full"] }
ratatui = "0.26.1"
crossterm = "0.27.0"
async-std = "1.12.0"
termcolor = "1.4.1"
chrono = "0.4.38"
